@@ -1,10 +1,10 @@
-.TH SSHPASS 1 "January 29, 2021" "Lingnu Open Source Consulting" "Sshpass User Manual"
+.TH SSHPASS 1 "May 27, 2022" "Shachar Shemesh" "Sshpass User Manual"
 .\" Please adjust this date whenever revising the manpage.
 .SH NAME
 sshpass \- noninteractive ssh password provider
 .SH SYNOPSIS
 .B sshpass
-.RB [ -f\fIfilename | -d\fInum | -p\fIpassword | -e ]
+.RB [ \-f\fIfilename | \-d\fInum | \-p\fIpassword | \-e[\fIenv_var ]]
 .RI [ options ] " command arguments"
 .br
 .SH DESCRIPTION
@@ -35,8 +35,9 @@ The password is the first line of the file \fIfilename\fP.
 \fInumber\fP is a file descriptor inherited by sshpass from the runner. The
 password is read from the open file descriptor.
 .TP
-.B \-e
-The password is taken from the environment variable "SSHPASS".
+.B \-e\fP[\fIenv_var\fP]
+The password is taken from an environment variable. If \fIenv_var\fP is supplied, that is
+the environment variable used. If not, the password is taken from the variable \fBSSHPASS\fP.
 .TP
 .B \-P
 Set the password prompt. Sshpass searched for this prompt in the program's
@@ -107,11 +108,6 @@ To do the same from a bourne shell script in a marginally less exposed way:
 .PP
 SSHPASS=12345 rsync \-\-rsh='sshpass \-e ssh \-l test' host.example.com:path .
 .SH BUGS
-.P
-Sshpass is in its infancy at the moment. As such, bugs are highly possible. In
-particular, if the password is read from stdin (no password option at all), it
-is possible that some of the input aimed to be passed to ssh will be read by
-sshpass and lost.
 .P
 Sshpass utilizes the \fBpty\fR(7) interface to control the TTY for ssh. This interface,
 at least on Linux, has a misfeature where if no slave file descriptors are open, the
